# classic-search

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yml
src/: api.rs  database.rs  main.rs  module.rs
