[package]
name = "classic-search"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.188"
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
reqwest = { version = "0.10", features = ["json"] }
serde_json = "*"
envy = "=0.4.2"
dotenv = "0.15.0"
env_logger = "0.11.5"
anyhow = "1.0.91"
log = "0.4.22"
actix-web = "4"

[dependencies.mongodb]
version = "3.1.0"
