[package]
name = "classic-search"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.188"
futures = "0.3.28"
tokio = { version = "1.41.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "*"
envy = "=0.4.2"
env_logger = "0.11.5"
anyhow = "1.0.91"
log = "0.4.22"
actix-web = "4"

[dependencies.mongodb]
version = "3.1.0"
