[package]
name = "classic-search"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.91"
envy = "=0.4.2"
env_logger = "0.11.5"
futures = "0.3.31"
log = "0.4.22"
mongodb = "3.1.0"
serde = "1.0.213"
reqwest = { version = "0.12.8", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
